Intense Commit